Separated quephaestus to modules for better usability
- Moved all core files to quephaestus-core module as quarkus-extension
- Moved all CLI code and handling to quephaestus-cli
- Moved all validations and special mappings to static functions and used them in Blacksmith as it is the common place that can validate data no matter the origin (CLI, API, Custom library)